--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/tzi/bemlinter.js#readme",
   "dependencies": {
+    "colors": "^1.1.2",
     "globby": "^6.1.0",
     "lodash": "^4.17.3",
     "minimist": "^1.2.0",
