Add a small documentation

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "description": "BEM linter",
   "main": "index.js",
+  "bin" : {
+    "bemlinter" : "./cli.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
