Improve linter result and output

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "description": "BEM linter",
   "main": "index.js",
-  "bin" : {
-    "bemlinter" : "./cli.js"
+  "bin": {
+    "bemlinter": "./src/cli.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
