--- a/packages/gulp-bemlinter/package.json
+++ b/packages/gulp-bemlinter/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/M6Web/bemlinter/blob/master/packages/gulp-bemlinter/README.md",
   "dependencies": {
     "bemlinter": "^1.0.0",
+    "gulp-util": "^3.0.8",
     "lodash": "^4.17.4",
     "through2": "^2.0.3"
   },
