--- a/packages/bemlinter/package.json
+++ b/packages/bemlinter/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bemlinter",
   "version": "1.1.3",
-  "description": "A cli tool to lint bem component isolation in SCSS files",
+  "description": "A cli tool to lint bem component isolation in CSS / SCSS files",
   "main": "./src/bemlinter.js",
   "bin": {
     "bemlinter": "./bin/cli.js"
