--- a/packages/gulp-bemlinter/package.json
+++ b/packages/gulp-bemlinter/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-bemlinter",
   "version": "1.1.3",
-  "description": "A gulp plugin to lint bem component isolation in SCSS files",
+  "description": "A gulp plugin to lint bem component isolation in CSS / SCSS files",
   "main": "./src/gulp-bemlinter.js",
   "scripts": {
     "test": "jest"
