--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ cache:
     - node_modules
 
 install:
-  - npm install -g lerna@^2.0.0-beta
+  - npm install -g lerna@2.0.0-beta.35
   - lerna bootstrap
   - npm install
 
