--- a/packages/bemlinter/package.json
+++ b/packages/bemlinter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bemlinter",
-  "version": "1.1.3",
+  "version": "2.0.0-beta.0",
   "description": "A cli tool to lint bem component isolation in CSS / SCSS files",
   "main": "./src/bemlinter.js",
   "bin": {
