--- a/packages/gulp-bemlinter/package.json
+++ b/packages/gulp-bemlinter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-bemlinter",
-  "version": "1.1.3",
+  "version": "2.0.0-beta.0",
   "description": "A gulp plugin to lint bem component isolation in CSS / SCSS files",
   "main": "./src/gulp-bemlinter.js",
   "scripts": {
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/M6Web/bemlinter/blob/master/packages/gulp-bemlinter/README.md",
   "dependencies": {
-    "bemlinter": "^1.1.3",
+    "bemlinter": "^2.0.0-beta.0",
     "gulp-util": "^3.0.8",
     "lodash": "^4.17.3",
     "through2": "^2.0.3"
