--- a/package.json
+++ b/package.json
@@ -1,11 +1,33 @@
 {
   "name": "bemlinter",
-  "version": "1.0.0",
-  "description": "A tool belt to lint bem components",
+  "version": "2.0.0-beta.3",
+  "description": "A cli tool to lint bem component isolation in CSS / SCSS files",
+  "main": "./src/bemlinter.js",
+  "bin": {
+    "bemlinter": "./bin/cli.js"
+  },
+  "scripts": {
+    "test": "jest"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/M6Web/bemlinter.git"
+  },
+  "keywords": [
+    "bem",
+    "lint",
+    "linter",
+    "cli"
+  ],
+  "author": "Thomas ZILLIOX (http://tzi.fr)",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/M6Web/bemlinter/issues"
+  },
+  "homepage": "https://github.com/M6Web/bemlinter/blob/master/packages/bemlinter/README.md",
   "dependencies": {
     "colors": "^1.1.2",
     "globby": "^6.1.0",
-    "jest": "^18.1.0",
     "lodash": "^4.17.3",
     "minimist": "^1.2.0",
     "mz": "^2.6.0",
@@ -13,20 +35,10 @@
     "query-ast": "^1.0.0",
     "scss-parser": "^1.0.0"
   },
+  "engines": {
+    "node": ">=6"
+  },
   "devDependencies": {
-    "lerna": "2.0.0-beta.35"
-  },
-  "scripts": {
-    "test": "lerna run test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/M6Web/bemlinter.git"
-  },
-  "author": "Thomas ZILLIOX (http://tzi.fr)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/M6Web/bemlinter/issues"
-  },
-  "homepage": "https://github.com/M6Web/bemlinter#readme"
+    "jest": "^18.1.0"
+  }
 }
